# cluster-service-old

./: .gitignore  Makefile.am  configure.ac
.github/workflows/: codacy.yml  codeql-analysis.yml
example/: Makefile.am  cluster-client.c  data-pool-client.c  data-pool-client.h
include/: cluster_api.h  cluster_api_registernotify.h  cluster_api_shiftposition.h  cluster_api_speed.h  cluster_api_telltale.h  cluster_api_tripcomputer.h  ipc_protocol.h
lib/: Makefile.am  cluster-api-core.c  cluster-api-sdevent.c  cluster-api-sdevent.h  data-pool-client.c  data-pool-static-configurator.c  data-pool.c  data-pool.h
src/: Makefile.am  cluster-service-util.c  cluster-service.c  cluster-service.h  data-pool-service.c  data-pool-service.h  demo-data-generator.c  ipc_protocol.h  ms_client.c
test/: Makefile.am  cluster-api-test-telltale.cpp  cluster-api-test-trip.cpp  cluster-service-util-test.cpp  data-pool-service-test.cpp
test/mock/: libpthread_mock.hpp  libsystemd_mock.hpp  syscall_io_mock.hpp
tools/: check-codingstyle.sh  check-complexity.sh  run-test.sh
